# chess2.0

./: AUTHORS  ChangeLog  Clockwindow.cc  Clockwindow.h  Makefile  Makefile.am  Makefile.in  README  TimeControlDialog.cc  clock.cc  clock.h  configure  configure.ac  main.cc  movement.cc  movement.h
