#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([chess], [2.0])
# AC_CONFIG_SRCDIR([main.cc])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 no-define])
# AC_CONFIG_SRCDIR([Clockface.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for header files.
PKG_CHECK_MODULES([MYAPP], [gtkmm-3.0 >= 3.0.1])

# Checks for library functions.

# AC_CONFIG_FILES([Makefile])
AC_OUTPUT
